--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV = development
 
 ## Mongo URI
-MONGO_URI = mongodb+srv://malikkorucu:19981907@malikkorucu-qyi9g.mongodb.net/twitter-clone?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://malikkorucu:19981907@malikkorucu-qyi9g.mongodb.net/test?retryWrites=true&w=majority
 
 ## JWT
 SECRET_KEY = malikkorucu
